--- a/springboot/boot-jpa/src/main/resources/templates/result_dto.html
+++ b/springboot/boot-jpa/src/main/resources/templates/result_dto.html
@@ -18,7 +18,7 @@
                 <th>주소</th>
                 <th>성별</th>
             </tr>
-            <tr th:object="${address}">
+            <tr th:if="${address != null}" th:object="${address}">
                 <td>[[*{seq}]]</td>
                 <td>[[*{name}]]</td>
                 <td>[[*{age}]]</td>
@@ -26,5 +26,7 @@
                 <td>[[*{gender}]]</td>
             </tr>
         </table>
+
+        <div class="message" th:if="${address == null}">address 없음.</div>
     </body>
 </html>
