--- a/springboot/boot-thymeleaf/src/main/resources/templates/m05.html
+++ b/springboot/boot-thymeleaf/src/main/resources/templates/m05.html
@@ -52,8 +52,8 @@
         <div>이름: <span th:text="${name}"></span></div> **
         <div th:text="'이름: ' + ${name}"></div>
         <div th:text="|이름: ${name}|"></div>
-        <div th:inline="text">이름: [[${name}]]</div> **
-        <div>이름: [[${name}]]</div>
+        <div th:inline="text">이름: [[${name}]]</div>
+        <div>이름: [[${name}]]</div> **
         <div id="list"></div>
 
         <script>
